--- a/express/package.json
+++ b/express/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@databases/sqlite": "^4.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^4.12.1",
     "nodemon": "^2.0.20"
   }
 }
