--- a/express/package.json
+++ b/express/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.12.1",
+    "mongodb-memory-server": "^8.10.1",
+    "mongoose": "^6.8.0",
     "nodemon": "^2.0.20"
   }
 }
